// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Validate the wordListCompiler > Specify directives 1`] = `
{
  "error": "",
  "log": "Writing to file temp/src/compiler/wordListCompiler.test.ts/Validate_the_wordListCompiler___Specify_directives/example2.txt",
}
`;

exports[`Validate the wordListCompiler > a simple hunspell dictionary depth 0 1`] = `
{
  "error": "",
  "log": "Writing to file temp/src/compiler/wordListCompiler.test.ts/Validate_the_wordListCompiler___a_simple_hunspell_dictionary_depth_0/example0.txt",
}
`;

exports[`Validate the wordListCompiler > a simple hunspell dictionary depth 1 1`] = `
{
  "error": "",
  "log": "Writing to file temp/src/compiler/wordListCompiler.test.ts/Validate_the_wordListCompiler___a_simple_hunspell_dictionary_depth_1/example1.txt",
}
`;

exports[`Validate the wordListCompiler > compiling to a file without split 1`] = `
{
  "error": "",
  "log": "Writing to file temp/src/compiler/wordListCompiler.test.ts/Validate_the_wordListCompiler___compiling_to_a_file_without_split/cities2.txt",
}
`;

exports[`Validate the wordListCompiler > reading and normalizing to 'cities.trie' 1`] = `
{
  "error": "",
  "log": "Reading Words into Trie
Reduce duplicate word endings
Trie compilation complete
Writing to file temp/src/compiler/wordListCompiler.test.ts/Validate_the_wordListCompiler___reading_and_normalizing_to__cities.trie_/cities.trie
Done writing to file cities.trie",
}
`;

exports[`Validate the wordListCompiler > reading and normalizing to 'cities.trie.gz' 1`] = `
{
  "error": "",
  "log": "Reading Words into Trie
Reduce duplicate word endings
Trie compilation complete
Writing to file temp/src/compiler/wordListCompiler.test.ts/Validate_the_wordListCompiler___reading_and_normalizing_to__cities.trie.gz_/cities.trie.gz
Done writing to file cities.trie.gz",
}
`;

exports[`Validate the wordListCompiler > reading and normalizing to text file: 'cities.txt' 1`] = `
{
  "error": "",
  "log": "Writing to file temp/src/compiler/wordListCompiler.test.ts/Validate_the_wordListCompiler___reading_and_normalizing_to_text_file___cities.txt_/cities.txt",
}
`;

exports[`Validate the wordListCompiler > reading and normalizing to text file: 'cities.txt.gz' 1`] = `
{
  "error": "",
  "log": "Writing to file temp/src/compiler/wordListCompiler.test.ts/Validate_the_wordListCompiler___reading_and_normalizing_to_text_file___cities.txt.gz_/cities.txt.gz",
}
`;

exports[`Validate the wordListCompiler > tests normalized to a trie 1`] = `
{
  "error": "",
  "log": "",
}
`;
